started on the search functionality