@@ -16,7 +16,16 @@ public class SearchService {
 
     public List<Board> performSearch(String keyword) {
 
-        // TODO: to be implemented
+        List<Board> boardsContainingKeyword = findBoardsContainingKeyword(keyword);
+        List<TodoTask> tasksContainingKeyword = findTasksContainingKeyword(keyword);
+
+        if (boardsContainingKeyword.isEmpty() && tasksContainingKeyword.isEmpty()) {
+            // no boards or tasks match the keyword user entered in the search bar
+            return null;
+        } else if (!boardsContainingKeyword.isEmpty()) {
+            return boardsContainingKeyword;
+        }
+
         return null;
     }
 
@@ -24,30 +33,28 @@ public class SearchService {
         return (boardNames != null && !boardNames.contains("all"))
             ? boards.stream()
             .filter(board -> boardNames.contains(board.getBoardName()))
-            .collect(Collectors.toList())
-            : boards;
+            .toList() : boards;
     }
 
     public List<TodoTask> filterTasksByPriority(List<String> priorities, List<TodoTask> tasks) {
         return (priorities != null && !priorities.contains("all"))
             ? tasks.stream()
             .filter(task -> priorities.contains(task.getPriority().name()))
-            .collect(Collectors.toList())
-            : tasks;
+            .toList() : tasks;
     }
 
     private List<TodoTask> findTasksContainingKeyword(String keyword) {
         return todoTaskService.getAllTasks().stream()
-            .filter(task -> task.getTitle().contains(keyword)
-                || task.getDescription().contains(keyword))
+            .filter(task -> (task.getTitle().contains(keyword) || task.getDescription().contains(keyword))
+                && !task.getBoard().isDefault())
             .toList();
     }
 
     private List<Board> findBoardsContainingKeyword(String keyword) {
-       return boardService.getAllBoards().stream()
-           .filter(board -> board.getBoardName().contains(keyword)
-               || board.getDescription().contains(keyword))
-           .toList();
+        return boardService.getAllBoards().stream()
+            .filter(board -> (board.getBoardName().contains(keyword) || board.getDescription().contains(keyword))
+                && !board.isDefault())
+            .toList();
     }
 
 }
